--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^5.0.3"
+pillow = "^10.3.0"
+psycopg2-binary = "^2.9.9"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
